Name:           language-cfamily
Version:        0.4.7
Cabal-Version:  >= 1.6
Build-Type:     Simple
License:        BSD3
License-File:   LICENSE
Copyright:      LICENSE
Author:         AUTHORS
Maintainer:     benedikt.huber@gmail.com
Stability:      experimental
Homepage:       http://www.sivity.net/projects/language.c/
Bug-reports:    http://www.sivity.net/projects/language.c/

Synopsis:       Analysis and generation of C code
Description:    Language C is a haskell library for the analysis and generation of C code.
                It features a complete, well tested parser and pretty printer for all of C99 and a large
                set of GNU extensions.
Category:       Language

Extra-Source-Files: AUTHORS AUTHORS.c2hs ChangeLog README
                    src/Language/C/Parser/Lexer.x
                    src/Language/C/Parser/Parser.y

Source-Repository head
  type:     darcs
  location: http://code.haskell.org/language-c

Flag splitBase
    Description: Choose the new smaller, split-up base package.
Flag useByteStrings
    Description: Use ByteString as InputStream datatype
    Default: True
Flag separateSYB
  description: Data.Generics available in separate package.

Library
    Extensions: CPP, DeriveDataTypeable, PatternGuards, BangPatterns, ExistentialQuantification, GeneralizedNewtypeDeriving, ScopedTypeVariables
    Build-Depends:  filepath

    if flag(splitBase)
        Build-Depends: base >= 3 && < 5, process, directory, array, containers, pretty

        If flag(separateSYB)
          Build-Depends:
            base >=4 && <5,
            syb
        Else
          Build-Depends:
            base <4
    else
        Build-Depends: base < 3

    if flag(useByteStrings)
        Build-Depends: bytestring >= 0.9.0
    else
        cpp-options: -DNO_BYTESTRING
    Build-Tools:    happy, alex
    Ghc-options: -Wall
    Hs-Source-Dirs: src
    Exposed-Modules:
                      -- top-level
                      Language.CFamily.C
                      Language.CFamily.CXX
                      -- data
                      Language.CFamily.Data
                      Language.CFamily.Data.DefTable
                      Language.CFamily.Data.Position
                      Language.CFamily.Data.Ident
                      Language.CFamily.Data.Error
                      Language.CFamily.Data.Name
                      Language.CFamily.Data.Node
                      Language.CFamily.Data.InputStream
                      Language.CFamily.Data.ParserMonad
                      Language.CFamily.Data.RList
                      Language.CFamily.Data.TravMonad
                      -- syntax
                      Language.CFamily.C.Syntax
                      Language.CFamily.C.Syntax.AST
                      Language.CFamily.C.Syntax.Constants
                      Language.CFamily.C.Syntax.Ops
                      Language.CFamily.C.Syntax.Utils
                      -- parser
                      Language.CFamily.C.Parser
                      -- pretty printer
                      Language.CFamily.C.Pretty
                      -- system
                      Language.CFamily.System.Preprocess
                      Language.CFamily.System.GCC
                      -- analysis [experimental]
                      Language.CFamily.C.Analysis
                      Language.CFamily.C.Analysis.ConstEval
                      Language.CFamily.C.Analysis.Builtins
                      Language.CFamily.C.Analysis.SemError
                      Language.CFamily.C.Analysis.SemRep
                      Language.CFamily.C.Analysis.AstAnalysis
                      Language.CFamily.C.Analysis.DeclAnalysis
                      Language.CFamily.C.Analysis.Debug
                      Language.CFamily.C.Analysis.TypeCheck
                      Language.CFamily.C.Analysis.TypeConversions
                      Language.CFamily.C.Analysis.TypeUtils
                      Language.CFamily.C.Analysis.NameSpaceMap
                      -- semrep -> code [alpha]
                      Language.CFamily.C.Analysis.Export
    Other-Modules:
                      -- parser implementation
                      Language.CFamily.C.Parser.Builtin
                      Language.CFamily.C.Parser.Lexer
                      Language.CFamily.C.Parser.Tokens
                      Language.CFamily.C.Parser.Parser

