Name:                   language-cfamily
Version:                0.4.7
Cabal-Version:          >= 1.6
Build-Type:             Simple
License:                BSD3
License-File:           LICENSE
Copyright:              LICENSE
Author:                 AUTHORS
Maintainer:             micknelso@gmail.com
Stability:              experimental
Homepage:               https://github.com/micknelso/language-cfamily
Bug-Reports:            https://github.com/micknelso/language-cfamily/issues
-- Package-Url:
Synopsis:               Library for analysing C and C++ programs
Description:            A Haskell library for parsing, analysing, and pretty
                        printing C and C++ code.
Category:               Language
Tested-With:            GHC == 7.10.3
Extra-Source-Files:     AUTHORS
                        AUTHORS.c2hs
                        ChangeLog
                        README
                        src/Language/CFamily/C/Lexer.x
                        src/Language/CFamily/C/Parser.y
                        src/Language/CFamily/CXX/Lexer.x
-- extra-doc-files:
-- data-files:
-- data-dir:
-- extra-tmp-files:

Source-Repository head
  Type:                 git
  Location:             https://github.com/micknelso/language-cfamily.git
-- Tag: 

-- Flag useByteStrings
--    Description:         Use ByteString as InputStream datatype
--    Default:             True

Library
   Exposed:             True
   Build-Depends:       array >= 0.5 && < 0.6,
                        bytestring >= 0.10 && < 0.11,
                        base >= 4.8 && < 4.9,
                        containers >= 0.5 && < 0.6,
                        directory >= 1.2 && < 1.3,
                        filepath >= 1.4 && < 1.5,
                        pretty >= 1.1 && < 1.2,
                        process >= 1.2 && < 1.3,
                        syb >= 0.6 && < 0.7

-- If flag(useByteStrings)
--    Build-Depends:       bytestring >= 0.10 && < 0.11
-- Else
--    Cpp-Options:         -DNO_BYTESTRING

   Extensions:          CPP, DeriveDataTypeable, FlexibleContexts, FlexibleInstances, 
                        MultiParamTypeClasses, PatternGuards, RelaxedPolyRec,
                        ScopedTypeVariables, TypeSynonymInstances, RankNTypes
   Include-Dirs:        . 
   Ghc-Options:         -Wall
   Build-Tools:         happy >= 1.19.5,
                        alex >= 3.1.7
   Hs-Source-Dirs:      src
   Exposed-Modules:
                        Language.CFamily.Constants
                        Language.CFamily.Token
                        Language.CFamily.C.Analysis.AstAnalysis
                        Language.CFamily.C.Analysis.Builtins
                        Language.CFamily.C.Analysis.ConstEval
                        Language.CFamily.C.Analysis.Debug
                        Language.CFamily.C.Analysis.DeclAnalysis
                        Language.CFamily.C.Analysis.Export
                        Language.CFamily.C.Analysis.NameSpaceMap
                        Language.CFamily.C.Analysis.SemError
                        Language.CFamily.C.Analysis.SemRep
                        Language.CFamily.C.Analysis.TypeCheck
                        Language.CFamily.C.Analysis.TypeConversions
                        Language.CFamily.C.Analysis.TypeUtils
                        Language.CFamily.C.Builtin
                        Language.CFamily.C.DefTable
                        Language.CFamily.C.Lexer
                        Language.CFamily.C.Parser
                        Language.CFamily.C.ParserMonad
                        Language.CFamily.C.Pretty
                        Language.CFamily.C.Syntax.AST
                        Language.CFamily.C.Syntax.Ops
                        Language.CFamily.C.Syntax.Utils
                        Language.CFamily.C.TravMonad
--                        Language.CFamily.CXX.AST
--                        Language.CFamily.CXX.DefTable
                        Language.CFamily.CXX.Lexer
                        Language.CFamily.CXX.ParserMonad
--                        Language.CFamily.CXX.TravMonad
                        Language.CFamily.Data.Error
                        Language.CFamily.Data.Ident
                        Language.CFamily.Data.InputStream
                        Language.CFamily.Data.Name
                        Language.CFamily.Data.Node
                        Language.CFamily.Data.Position
                        Language.CFamily.Data.RList
                        Language.CFamily.System.GCC
                        Language.CFamily.System.Preprocess
-- Other-Modules:

